--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@ body,
 :root {
   height: 100%;
 }
+
+
  
 @layer base {
   :root {
@@ -93,4 +95,13 @@ body,
   border-radius: 10px;
   padding: 10px;
   min-height: 200px;
+}
+
+.tiptap p {
+  margin-bottom: 10px;
+}
+
+.tiptap p a {
+  text-decoration: underline;
+  color: blue;
 }
